# This is where you add specific test directories

## Functional tests
add_subdirectory(functional_testing/allometry fates_allom_ftest)
add_subdirectory(functional_testing/math_utils fates_math_ftest)
add_subdirectory(functional_testing/fire/fuel fates_fuel_ftest)
add_subdirectory(functional_testing/fire/ros fates_ros_ftest)
add_subdirectory(functional_testing/patch fates_patch_ftest)

## Unit tests
add_subdirectory(unit_testing/fire_weather_test fates_fire_weather_utest)
add_subdirectory(unit_testing/fire_fuel_test fates_fire_fuel_utest)
add_subdirectory(unit_testing/sort_cohorts_test fates_sort_cohorts_utest)
add_subdirectory(unit_testing/insert_cohort_test fates_insert_cohort_utest)
add_subdirectory(unit_testing/validate_cohorts_test fates_validate_cohorts_utest)
add_subdirectory(unit_testing/count_cohorts_test fates_count_cohorts_utest)
add_subdirectory(unit_testing/fire_equations_test fates_fire_equations_utest)
