[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "landusepft"
version = "0.0.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# [tool.pytest.ini_options]
# addopts = "-ra -q"
# testpaths = [
#     "tests",
#     "integration",
# ]
